[package]
name = "codec"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost-types = "0.8"
anyhow = "1.0"
prost = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

errors = { path = "../errors" }
