[package]
name = "logger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
itertools = "0.8"
chrono = "0.4"
once_cell = { version = "1.8.0" }

vine-util = {path = "../vine-util"}