[package]
name = "registry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
etcd-client = "0.7.1"
tokio = { version = "1.10.0", features = ["full"] }
tonic = { version = "0.5.2", features = ["tls", "compression"] }
prost-types = "0.8"
anyhow = "1.0"
prost = "0.8.0"
once_cell = { version = "1.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.51"

errors = { path = "../errors" }
logger = { path = "../logger" }