[package]
name = "vine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# # vine core library 
codec = { path = "../codec" }
registry = { path = "../registry" }
broker = { path = "../broker" }
server = { path = "../server" }
client = { path = "../client" }
# vine library
logger = { path = "../logger" }
errors = { path = "../errors" }
vine-util = { path = "../vine-util" }

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["prost", "compression"] }